[package]
name = "hello_world"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
eframe = { version = "0.24.1"}

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
